# memories

./: .gitignore  CMakeLists.txt  LICENSE
exe_main/: main.cpp
exe_test/: main.cpp
include/: ApplicationMain.h
include/system/: ApplicationMain.h  CreateWindow.h  DispatchEvents.h  EventSource.h  EventSourceLinux.h  LICENSE  Window.h
include/system/_/: CreateWindowLinux.h  DispatchEvents.h  DispatchEventsLinux.h  EventSourceLinux.h  WindowLinux.h
src/: ApplicationMain.cpp  CMakeLists.txt
src/system/: ApplicationMain.cpp  EventSourceLinux.cpp
src/system/_/: CreateWindowLinux.cpp  DispatchEventsLinux.cpp  EventSourceLinux.cpp
style/: CodeStyle.xml
